--- a/style/style.css
+++ b/style/style.css
@@ -128,7 +128,7 @@ body {
         background: var(--background);
         gap: 15px ;
     
-        button {
+        a {
             padding: 12px 24px;
             margin: 8px;
             border: none;
@@ -136,9 +136,10 @@ body {
             background: var(--button);
             color: var(--text);
             transition: background-color ease-in 0.5ms;
+            text-decoration: none;
         }
         
-        button:hover {
+        a:hover {
             cursor: pointer;
             background: #0076ca;
             color: var(--text);
