--- a/style/collaborators.css
+++ b/style/collaborators.css
@@ -7,8 +7,8 @@
 }
 
 :root {
-    --text: #F6F6F6;
-    --background: #f4f1ec;
+    --text: #ffff;
+    --background: #f5f5f7;
     --secondary: #1F2937;
     --primary: #111827;
     --radius: 10px;
@@ -103,6 +103,7 @@ body {
         height: 50rem;
         background: var(--background);
         gap: 15px ;
+        
 
         .photo-droite {
             display: flex;
@@ -178,9 +179,13 @@ body {
 }
 
 .h1{
-    font-size: 40px;
-    margin-top : 15px ;
+    font-size: 70px;
     font-family: "San Francisco", sans-serif;
+    font-weight: 0;
+    background-image: linear-gradient(to left, #0090f7, #ba62fc, #f2416b);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin: auto;
 } 
 
 img {
