--- a/style/style.css
+++ b/style/style.css
@@ -1,11 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-
 @import url('https://fonts.cdnfonts.com/css/sf-pro-display');
-
-
 
 :root {
     --text: #ffff;
+    --text2: #1d1d1f;
     --background: #f5f5f7;
     --button: #0071e3;
     --button-hovered: #0679eb;
@@ -17,235 +14,241 @@
 * {
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
+    box-sizing: border-box;
 }
 
-body {
+html, body {
+    scroll-behavior: smooth;
+    width: 100%;
+    height: 100%;
     background: var(--text);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
     font-family: "SF Pro Display", sans-serif;
-    animation: 3s websiteopen;
+    animation: 5s websiteopen;
     user-select: none;
-    /*linear-gradient(to right, #0090f7, #ba62fc, #f2416b)*/
+    gap: 25px;
+}
 
-    .header {
+
+/* Header  */
+.header {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    padding: 10px;
+    margin: 0px 8px;
+    background: var(--text);
+    transition: width ease-in 1.5s;
+
+    h1 {
+        background-image: linear-gradient(to right, #0090f7, #ba62fc, #f2416b);        
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
+
+    nav {
         display: flex;
-        justify-content: space-around;
         align-items: center;
-        width: 100%;
-        padding: 10px;
-        margin: 0px 8px;
-        -webkit-box-shadow: 0 5px 15px 0 var(--secondary);
-        box-shadow: 0 5px 15px 0 var(--secondary);
-        transition: width ease-in 1.5s;
+        justify-content: flex-end;
+        flex-direction: row;
+        border-radius: 10px;
 
-        h1 {
-            background-image: linear-gradient(to right, #0090f7, #ba62fc, #f2416b);
-            background-clip: text;
-            -webkit-text-fill-color: transparent;
-        }
-
-        nav {
-            display: flex;
-            align-items: center;
-            justify-content: flex-end;
-            flex-direction: row;
-            height: 100%;
-            border-radius: 10px;
-
-
-            .nav-button {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                flex-direction: row;
-                margin: 8px;
-                border: none;
-                color: var(--primary);
-                background: none;
-                transition: all ease-in 0.2ms;
-            }
-
-            a {
-                font-size: 17px;
-                text-decoration: none;
-                font-weight: 0;
-                font-family: "SF Pro Display", sans-serif;
-            }
-            
-            a:hover {
-                cursor: pointer;
-                color: var(--selected);
-            }
-
-            .selected {
-                color: var(--selected);
-                font-weight: 500;
-
-            }
-
-            .nav-button:hover {
-                cursor: pointer;
-                color: var(--selected);
-            }
-        }
-
-
-        .socials {
+        .nav-button {
             display: flex;
             justify-content: center;
             align-items: center;
             flex-direction: row;
-            gap: 12px;
+            margin: 8px;
+            border: none;
+            color: var(--primary);
+            background: none;
+            transition: all ease-in 0.2ms;
+        }
 
-            a {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                text-decoration: none;
-                color: var(--primary);
-                transition: all ease-in 0.1s;
-            }
-            
-            i {
-                font-size: 25px;
-            }
+        a {
+            font-size: 17px;
+            text-decoration: none;
+            font-weight: 0;
+            font-family: "SF Pro Display", sans-serif; 
+        }
 
-            a:hover {
-                cursor: pointer;
-                color: var(--selected);
-            }
+        a:hover {
+            cursor: pointer;
+            color: var(--selected);
+        }
+        
+        .selected {
+            color: var(--selected);
+            font-weight: 500;
+        }
+
+        .nav-button:hover {
+            cursor: pointer;
+            color: var(--selected);
         }
     }
 
-    .home {
+    .socials {
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
+        align-items: center;
+        flex-direction: row;
+        gap: 12px;
+
+        a {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-decoration: none;
+            color: var(--primary);
+            transition: all ease-in 0.1s;
+        }
+
+        a:hover {
+            cursor: pointer;
+            color: var(--button-hovered);
+        }
+
+        i {
+            font-size: 25px;
+            overflow: hidden;
+        }
+    }
+}
+
+/* Home page */
+
+.home {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    width: 100%;
+    height: 100%;
+    background: var(--background);
+    gap: 15px;
+
+    a {
+        padding: 12px 24px;
+        margin: 8px;
+        border: none;
+        border-radius: 50px;
+        background: var(--button);
+        color: var(--text);
+        transition: background-color ease-in 0.5ms;
+        text-decoration: none;
+    }
+
+    a:hover {
+        cursor: pointer;
+        background-color: #0076ca;
+        color: var(--text);
+    }
+
+    .home-right, .home-left {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        padding: 24px;
+
+
+        h1 {
+            font-size: 56px;
+            font-family: "SF Pro Display", sans-serif;
+            font-weight: 200;
+            text-align: center;
+            background-image: linear-gradient(to left, #0090f7, #ba62fc, #f2416b);
+            background-clip: text;
+            -webkit-text-fill-color: transparent; 
+    
+        }
+
+        p {
+            font-family: "SF Pro Display", sans-serif;
+            font-size: 22px;
+            text-align: center;
+            color: var(--text2);
+        }
+    }
+}
+
+/* About page */
+
+.about {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: column;
+    width: 100%;
+    gap: 15px;
+    margin: 25px 0;
+
+    .about-title-container {
+        display: flex;
+        justify-content: center;
         align-items: center;
         flex-direction: row;
         width: 100%;
-        height: 50rem;
-        background: var(--background);
-        gap: 15px ;
-    
-        a {
-            padding: 12px 24px;
-            margin: 8px;
-            border: none;
-            border-radius: 50px;
-            background: var(--button);
-            color: var(--text);
-            transition: background-color ease-in 0.5ms;
-            text-decoration: none;
-        }
-        
-        a:hover {
-            cursor: pointer;
-            background: #0076ca;
-            color: var(--text);
-        }
-    
-        .home-right, .home-left {
-            display: flex;
-            align-items: center;
-            flex-direction: column;
-            justify-content: center;
-            width: 100%;
-            padding: 24px;
-            margin: 12px;
-    
-            h6 {
-                font-size: 56px;
-                font-family: "SF Pro Display", sans-serif;
-                font-weight: 0;
-                text-align: center;
-                line-height: 1.05;
-                background-image: linear-gradient(to left, #0090f7, #ba62fc, #f2416b);
-                background-clip: text;
+
+        .about-title {
+            background-image: linear-gradient(to left, #0090f7, #ba62fc, #f2416b);
+            background-clip: text;
                 -webkit-text-fill-color: transparent;
-            }
-    
-            p {
-                font-family: "SF Pro Display", sans-serif;
-                font-size: 25px;
-                text-align: center;
-            }
+            font-weight: 500;
         }
+
+        .about-subtitle {
+            font-weight: 200;
+        }
+
+        h1 {
+            font-size: 45px;
+            font-family: "SF Pro Display", sans-serif;
+            text-align: center;
+            color: var(--subtitle);
+        }   
     }
 
-    .scrolled-down {
-        animation: 1s scrolled-down ease-in-out forwards;
-        border-radius: 10px;
-    }
-
-    .scrolled-up {
-        animation: 1s scrolled-up ease-in-out forwards;
-        border-radius: 0;
-    }
-
-    .about {
+    .about-container {
         display: flex;
         align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        width: 100%;
-        margin: 20px;
-        gap: 12px;
-        user-select: none;
+        flex-direction: row;
+        width: 90%;
+        height: 100%;
 
-        .about-title-container {
+        .container-items {
             display: flex;
             justify-content: center;
             align-items: center;
-            flex-direction: row;
-            margin: 25px;
-
-            .about-title {
-                background-image: linear-gradient(to left, #0090f7, #ba62fc, #f2416b);
-                background-clip: text;
-                -webkit-text-fill-color: transparent;
-                font-weight: 500;
-            }
-
-            .about-subtitle {
-                font-weight: 200;
-            }
-
-            h1 {
-                font-size: 45px;
-                font-family: "SF Pro Display", sans-serif;
-                text-align: center;
-                line-height: 1.05;
-                color: var(--subtitle);
-            }
-        }
-
-        .about-container {
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            flex-direction: column;
+            background: linear-gradient(to top, #ffff, #f2f2f2);
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px -2px rgba(156,156,156,0.72);transition: scale 0.3s ease;
             width: 100%;
-            margin-bottom: 30px;
+            margin: 12px;
+            padding: 24px;
+            z-index: 3;
 
-            .container-items {
+            p {
+                text-align: center;
+                color: var(--text2);
+            }
+
+
+            .container-title {
                 display: flex;
-                justify-content: space-evenly;
-                align-items: center;
+                justify-content: center;
                 flex-direction: column;
-                padding: 15px;
-                margin: 0 30px;
-                width: 100%;
-                background: linear-gradient(to top, #ffff, #f2f2f2);
-                border-radius: 10px;
-                -webkit-box-shadow: 0px 0px 15px 10px #ccc; 
-                box-shadow: 0px 0px 15px 10px #ccc;
-                transition: scale 0.3s ease;
+                align-items: center;
 
                 p {
                     text-align: center;
                     font: 12px;
+                    color: var(--text2);
                 }
 
                 h1 {
@@ -264,54 +267,213 @@ body {
                     color: var(--subtitle);
                     text-align: center;
                     font-weight: 200;
+                    margin-bottom: 10px;
                 }
-
-                img {
-                    user-select: none;
-                }
-            }
-
-            .container-items:hover {
-                cursor: pointer;
-                scale: 1.05;
             }
         }
-    }
 
-    .collaborator {
+        .container-items:hover {
+            scale: 1.01;
+            cursor: pointer;
+        }
+    }
+}
+
+/* Collaborator page */
+
+.collaborator {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    gap: 15px;
+    padding: 25px 0;
+    background: var(--background);
+
+    .collaborator-title-container {
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: row;
         width: 100%;
-        height: 50rem;
-        background: var(--background);
-        gap: 15px;
 
-        .collaborator-title-container {
+        .collaborator-title {
+            background-image: linear-gradient(to left, #0090f7, #ba62fc, #f2416b);
+            background-clip: text;
+                -webkit-text-fill-color: transparent;
+            font-weight: 500;
+        }
+
+        .collaborator-subtitle {
+            font-weight: 200;
+        }
+
+        h1 {
+            font-size: 45px;
+            font-family: "SF Pro Display", sans-serif;
+            text-align: center;
+            color: var(--subtitle);
+        }   
+    }
+
+    .collaborator-container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: row;
+        width: 90%;
+        height: 100%;
+
+        .container-items {
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            flex-direction: column;
+            background: linear-gradient(to top, #ffff, #f2f2f2);
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px -2px rgba(156,156,156,0.72);transition: scale 0.3s ease;
+            width: 80%;
+            margin: 12px;
+            padding: 24px;
+            gap: 5px;
+
+            img {
+               
+                border-radius: 10px;
+            }
+
+            p {
+                text-align: center;
+                font: 12px;
+                color: var(--text2);
+            }
+
+            h1 {
+                font-weight: 200;
+                font-size: 40px;
+                text-align: center;
+            }
+
+            .title {
+                background-image: linear-gradient(to right, #000000, #191919, #333333);
+                background-clip: text;
+                -webkit-text-fill-color: transparent;
+            }
+
+            .subtitle {
+                color: var(--subtitle);
+                text-align: center;
+                font-weight: 200;
+                margin-bottom: 10px;
+            }
+
+            a {
+                padding: 12px 24px;
+                margin: 8px;
+                border: none;
+                border-radius: 50px;
+                background: var(--button);
+                color: var(--text);
+                transition: background-color ease-in 0.5ms;
+                text-decoration: none;
+            }
+        
+            a:hover {
+                cursor: pointer;
+                background-color: #0076ca;
+                color: var(--text);
+            }
+        }
+
+        .container-items:hover {
+            scale: 1.01;
+            cursor: pointer;
+        }
+    }
+}
+
+/* Footer Page */
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    padding: 24px;
+    margin: 0px 8px;
+    background: var(--text);
+    transition: width ease-in 1.5s;
+
+    h1 {
+        background-image: linear-gradient(to right, #0090f7, #ba62fc, #f2416b);        
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
+
+    .separator {
+        width: 100%;
+        border: 0.2px solid var(--text2);
+    }
+
+    .footer-container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-direction: row;
+        width: 100%;
+        margin: 12px 0; 
+    
+        .socials {
             display: flex;
             justify-content: center;
             align-items: center;
             flex-direction: row;
-            margin: 25px;
-
-            .collaborator-title {
-                background-image: linear-gradient(to left, #0090f7, #ba62fc, #f2416b);
-                background-clip: text;
-                -webkit-text-fill-color: transparent;
-                font-weight: 500;
+            gap: 12px;
+    
+            a {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                text-decoration: none;
+                color: var(--primary);
+                transition: all ease-in 0.1s;
             }
+    
+            a:hover {
+                cursor: pointer;
+                color: var(--button-hovered);
+            }
+    
+            i {
+                font-size: 25px;
+                overflow: hidden;
+            }
+        }
 
-            .collaborator-subtitle {
+        .copyright {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: row;
+            gap: 10px;
+            padding: 24px 0;
+    
+            .subtitle {
                 font-weight: 200;
             }
-
-            h1 {
-                font-size: 45px;
+    
+            a {
                 font-family: "SF Pro Display", sans-serif;
                 text-align: center;
-                line-height: 1.05;
                 color: var(--subtitle);
+                text-decoration: none;
+            }  
+
+            a:hover {
+                cursor: pointer;
+                color: var(--button);
             }
         }
     }
@@ -323,23 +485,5 @@ body {
     }
     100% {
         opacity: 1;
-    }
-}
-
-@keyframes scrolled-down {
-    0% {
-        width: 100%;
-    }
-    100% {
-        width: 90%;
-    }
-}
-
-@keyframes scrolled-up {
-    0% {
-        width: 90%;
-    }
-    100% {
-        width: 100%;
     }
 }
