--- a/style/styleCv.css
+++ b/style/styleCv.css
@@ -204,4 +204,40 @@ body {
     color: #4caf50;
     text-decoration: none;
   }
-    
+ /* responsive */
+  @media (max-width: 768px) {
+    main {
+        display: flex;
+        flex-direction: column; 
+        gap: 10px;
+    }
+
+    .left-column, .right-column {
+        flex: 1;
+        width: 100%; 
+        margin: 0; 
+    }
+
+    section {
+        padding: 15px;
+        margin-bottom: 10px;
+    }
+
+    h1 {
+        font-size: 1.5rem;
+        margin-bottom: 10px;
+    }
+
+    .profile {
+        display: flex;
+        flex-direction: column; 
+        align-items: center; 
+        text-align: center;
+    }
+
+    .profile-pic {
+        max-width: 100%;
+        height: auto; 
+        margin-bottom: 10px;
+    }
+}
