--- a/style/style.css
+++ b/style/style.css
@@ -2,11 +2,11 @@
 
 :root {
     --text: #ffff;
-    --text2: #1d1d1f;
-    --background: #f5f5f7;
-    --button: #0071e3;
-    --button-hovered: #0679eb;
-    --subtitle: #6e6e73;
+    --text2: #000000;
+    --background: #eeeeee;
+    --button: #0088cc;
+    --button-hovered: #298ff5;
+    --subtitle: #979797;
     --radius: 10px;
     --selected: rgb(0, 118, 202)
 }
@@ -46,22 +46,6 @@ html, body {
         -webkit-text-fill-color: transparent;
     }
 
-    .login {
-        background: var(--button);
-        padding: 12px 24px;
-        border-radius: 50px;
-        margin: 8px;
-        color: var(--text);
-        transition: all ease-in 0.5s;
-        text-decoration: none;
-        font-size: 13px;
-    }
-
-    .login:hover {
-        background: var(--background);
-        color: var(--text);
-        border: 0.1px solid var(--button);
-    }
 
     nav {
         display: flex;
@@ -102,6 +86,23 @@ html, body {
         .nav-button:hover {
             cursor: pointer;
             color: var(--selected);
+        }
+
+        .login {
+            padding: 10px 20px;
+            margin: 8px;
+            border: none;
+            border-radius: 50px;
+            background: var(--button);
+            color: var(--text);
+            transition: background-color ease-in 0.5ms;
+            text-decoration: none;
+        }
+    
+        .login:hover {
+            cursor: pointer;
+            background-color: #0076ca;
+            color: var(--text);
         }
     }
 
