--- a/style/styleCv.css
+++ b/style/styleCv.css
@@ -37,6 +37,9 @@ body {
   h1 {
     margin: 0;
     font-size: 2rem;
+    background-image: linear-gradient(to right, #0090f7, #ba62fc, #f2416b);        
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
   }
   
   p {
