--- a/style/style_contact.css
+++ b/style/style_contact.css
@@ -26,6 +26,11 @@ html, body {
     animation: 5s websiteopen;
     user-select: none;
     gap: 25px;
+    display : flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 100vh;
 }
 
 
@@ -215,246 +220,8 @@ html, body {
     animation-name: textFadeOut;
 }
 
-/* About page */
-
-.about {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    flex-direction: column;
-    width: 100%;
-    gap: 15px;
-    margin: 25px 0;
-
-    animation-duration: 0.5s;
-    animation-timing-function: ease-out;
-    animation-fill-mode: forwards;
-    animation-name: aboutScrollUp;
-
-    .about-title-container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: row;
-        width: 100%;
-
-        .about-title {
-            background-image: linear-gradient(to left, #0090f7, #ba62fc, #f2416b);
-            background-clip: text;
-                -webkit-text-fill-color: transparent;
-            font-weight: 500;
-        }
-
-        .about-subtitle {
-            font-weight: 200;
-        }
-
-        h1 {
-            font-size: 45px;
-            font-family: "SF Pro Display", sans-serif;
-            text-align: center;
-            color: var(--subtitle);
-        }   
-    }
-
-    .about-container {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: row;
-        width: 90%;
-        height: 100%;
-
-        .container-items {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            background: linear-gradient(to top, #ffff, #f2f2f2);
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px -2px rgba(156,156,156,0.72);transition: scale 0.3s ease;
-            width: 100%;
-            margin: 12px;
-            padding: 24px;
-            z-index: 3;
-
-            p {
-                text-align: center;
-                color: var(--text2);
-            }
 
 
-            .container-title {
-                display: flex;
-                justify-content: center;
-                flex-direction: column;
-                align-items: center;
-
-                p {
-                    text-align: center;
-                    font: 12px;
-                    color: var(--text2);
-                }
-
-                h1 {
-                    font-weight: 200;
-                    font-size: 40px;
-                    text-align: center;
-                }
-
-                .title {
-                    background-image: linear-gradient(to right, #000000, #191919, #333333);
-                    background-clip: text;
-                    -webkit-text-fill-color: transparent;
-                }
-
-                .subtitle {
-                    color: var(--subtitle);
-                    text-align: center;
-                    font-weight: 200;
-                    margin-bottom: 10px;
-                }
-            }
-        }
-
-        .container-items:hover {
-            scale: 1.01;
-            cursor: pointer;
-        }
-    }
-}
-
-.about.scrolled {
-    animation-name: aboutScrollDown;
-}
-
-/* Collaborator page */
-
-.collaborator {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    width: 100%;
-    gap: 15px;
-    padding: 25px 0;
-    background: var(--background);
-
-    animation-duration: 1s;
-    animation-timing-function: ease-out;
-    animation-fill-mode: forwards;
-    animation-name: collaboratorScrollUp;
-
-    .collaborator-title-container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: row;
-        width: 100%;
-
-        .collaborator-title {
-            background-image: linear-gradient(to left, #0090f7, #ba62fc, #f2416b);
-            background-clip: text;
-                -webkit-text-fill-color: transparent;
-            font-weight: 500;
-        }
-
-        .collaborator-subtitle {
-            font-weight: 200;
-        }
-
-        h1 {
-            font-size: 45px;
-            font-family: "SF Pro Display", sans-serif;
-            text-align: center;
-            color: var(--subtitle);
-        }   
-    }
-
-    .collaborator-container {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: row;
-        width: 90%;
-        height: 100%;
-
-        .container-items {
-            display: flex;
-            justify-content: flex-start;
-            align-items: center;
-            flex-direction: column;
-            background: linear-gradient(to top, #ffff, #f2f2f2);
-            border-radius: 10px;
-
-            transition: scale 1s ease;
-            width: calc(50% - 12px);
-            margin: 12px;
-            padding: 24px;
-            gap: 5px;
-            box-shadow: 6px 6px 6px rgba(0, 0, 0, 0.1), -10px -10px 10px white;
-            text-align: center;
-
-            img {
-               
-                border-radius: 10px;
-            }
-
-            p {
-                text-align: center;
-                font: 12px;
-                color: var(--text2);
-            }
-
-            h1 {
-                font-weight: 200;
-                font-size: 40px;
-                text-align: center;
-            }
-
-            .title {
-                background-image: linear-gradient(to right, #000000, #191919, #333333);
-                background-clip: text;
-                -webkit-text-fill-color: transparent;
-            }
-
-            .subtitle {
-                color: var(--subtitle);
-                text-align: center;
-                font-weight: 200;
-                margin-bottom: 10px;
-            }
-
-            a {
-                padding: 12px 24px;
-                margin: 8px;
-                border: none;
-                border-radius: 50px;
-                background: var(--button);
-                color: var(--text);
-                transition: background-color ease-in 0.5ms;
-                text-decoration: none;
-            }
-        
-            a:hover {
-                cursor: pointer;
-                background-color: #0076ca;
-                color: var(--text);
-            }
-        }
-
-        .container-items:hover {
-            scale: 1.02;
-            box-shadow: 12px 12px 12px rgba(0, 0, 0, 0.1), -10px -10px 10px white;
-            scale: 1.01;
-            cursor: pointer;
-        }
-    }
-}
-
-.collaborator.scrolled {
-    animation-name: collaboratorScrollDown;
-}
 
 /* Footer Page */
 
@@ -797,3 +564,52 @@ html, body {
         font-size: 9px;
     }
 }
+
+
+.request_message {
+    width : 400px ;
+    text-transform: capitalize;
+    background-color: #fff;
+    text-align: center;
+    color : green;
+    font-size : 13px;
+    padding : 14px ;
+    margin-bottom: 20px;
+    border-radius: 20px;
+    box-shadow: 0 0 8px rgba(0,0,0,0.1);
+    animation : anime 0.5s ease-out;
+}
+
+@keyframes anime {
+    from {
+        transform:translateY(-70px) ;
+    }
+}
+form {
+    background-color: #fff;
+    border-radius: 20px;
+    display : flex ; 
+    flex-direction: column;
+    box-shadow: 0 0 8px rgba(0,0,0,0.1);
+    width: 400px;
+    padding: 20px;
+
+}
+
+label {
+    font-size: 16px;
+    font-weight: 400;
+    margin : 5px 0;
+    text-transform: capitalize;
+
+}
+
+input , textarea {
+    padding: 8px;
+    color:black ;
+    resize: none;
+    outline : 0;
+    border: 1px solid #999;
+    border-radius: 4px;
+}
+
